[gd_scene load_steps=6 format=2]

[ext_resource path="res://Boat.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles.png" type="Texture" id=2]
[ext_resource path="res://assets/crash.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/duck.mp3" type="AudioStream" id=4]
[ext_resource path="res://Oar.tscn" type="PackedScene" id=5]

[node name="Boat" type="RigidBody2D"]
position = Vector2( 5, 7 )
collision_layer = 31
mass = 2.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 1.43761, 5.20414e-06 )
rotation = 1.5708
scale = Vector2( 1, 1.00331 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 700.941, 666.39, 115.556, 124 )

[node name="SpriteWithoutOars" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1.43761, 5.24521e-06 )
rotation = 1.5708
scale = Vector2( 0.8, 1.003 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 586, 546.111, 78, 122.738 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -43, -20, 19, -21, 42, -14, 57, -6, 59, -1, 57, 3, 40, 13, 15, 19, -42, 19, -49, 5, -48, -8 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 2, 2 )

[node name="CollectableArea" type="Area2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 256

[node name="CollisionCollectables" type="CollisionPolygon2D" parent="CollectableArea"]
polygon = PoolVector2Array( -42.5794, -24.0625, 16.4206, -24.0625, 40.4206, -16.0625, 57, -3, 57, 4, 37.4206, 16.9375, 20, 20, -32, 21, -43, 19, -50, 4, -51, -13 )

[node name="RayCastSB" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 60 )
collide_with_areas = true

[node name="RayCastBB" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -60 )
collision_mask = 3

[node name="CrashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CrashSoundDuck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="OarBB2" parent="." instance=ExtResource( 5 )]
position = Vector2( -5, -20 )
boat = NodePath("..")

[node name="OarBB1" parent="." instance=ExtResource( 5 )]
position = Vector2( 15, -20 )
boat = NodePath("..")

[node name="OarSB2" parent="." instance=ExtResource( 5 )]
position = Vector2( -5, 20 )
scale = Vector2( -1, 1 )
boat = NodePath("..")
isSB = true

[node name="OarSB1" parent="." instance=ExtResource( 5 )]
position = Vector2( 15, 20 )
scale = Vector2( -1, 1 )
boat = NodePath("..")
isSB = true

[node name="OarBB1Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 13.6528, -19.6183 )
scale = Vector2( 0.694445, 1.06313 )
polygon = PoolVector2Array( -3, 10.1741, -4, -37, 5, -37, 5, 10 )

[node name="OarBB2Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( -5.88194, -19.6183 )
scale = Vector2( 0.763889, 1.06313 )
polygon = PoolVector2Array( -3, 10.1741, -4, -37, 5, -37, 5, 10 )

[node name="OarSB1Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 13.6528, 22.1721 )
scale = Vector2( 0.694445, -0.99366 )
polygon = PoolVector2Array( -3, 10.1741, -4, -37, 5, -37, 5, 10 )

[node name="OarSB2Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( -5.88194, 22.6286 )
scale = Vector2( 0.763889, -0.984734 )
polygon = PoolVector2Array( -3, 10.1741, -4, -37, 5, -37, 5, -14, 5, 10 )
